2007-12-07  Badlop  <badlop@process-one.net>

	* src/cyrsasl.erl: Fix compilation warnings: Part 1 (EJAB-290)
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_config.erl: Likewise
	* src/ejabberd_hooks.erl: Likewise
	* src/ejabberd_s2s_out.erl: Likewise
	* src/ejabberd_sm.erl: Likewise
	* src/idna.erl: Likewise
	* src/jd2ejd.erl: Likewise

2007-12-06  Badlop  <badlop@process-one.net>

	* src/acl.erl and other 64 files: Remove Erlang module attribute
	'vsn' because it doesn't provide any worth feature, and it
	difficults hot code update (EJAB-440)

	* src/ejabberdctl.cfg.example: Explain that each connection uses
	two or three ports (thanks to Max Loparyev)

	* src/configure: Regenerated
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/guide.html: Likewise
	* doc/version.tex: Likewise

	* doc/introduction.tex: Updated number of translated languages
	
	* src/web/ejabberd_web_admin.erl: Support more native acl_type on
	web interface (EJAB-253)

	* src/ejabberd_c2s.erl: Increase the timeout of open socket
	without authentication to 60 seconds because many Jabber clients
	are not yet capable of handling this correctly (EJAB-355)

	* src/Makefile.in: Allow compilation with HiPE, disabled by
	default, undocumented and unrecommended because it is experimental
	and doesn't seem to provide meaningful gains currently (thanks to
	Samuel Tardieu) (EJAB-412)
	* src/configure.ac: Likewise

	* src/msgs/cs.msg: Updated (thanks to Lukáš Polívka alias
	Spike411)

	* src/mod_muc/mod_muc.erl: Catch creation of table
	muc_online_users: it may be already created by other mod_muc
	instance

	* doc/Makefile: Remove bashism

	* doc/guide.tex: Document how to change computer
	hostname (EJAB-320)

	* src/web/ejabberd_http.erl: Change loglevel for http
	queries (EJAB-363)
	* src/web/ejabberd_web_admin.erl: Likewise

	* doc/guide.tex: Add mod_caps and improve mod_pubsub documentation
	* src/ejabberd.cfg.example: Added mod_caps enabled by default
